--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
 
 <body style="background-color:black; background: #630303 !important;" data-target="body">
+    <div style="overflow-x:hidden">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="mobile-header">
@@ -742,7 +743,7 @@
                 </div>
             </div>
 
-
+    </div>
         </body>
 
 </html>
