--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
 <body style="background-color:black; background: #630303 !important;" data-target="body">
-    <div style="overflow-x:hidden">
+   
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="mobile-header">
@@ -611,7 +611,7 @@
         </head>
 
         <body>
-
+ <div style="overflow-x:hidden; position:fixed;">
             <div>
                 <div style="max-width: fit-content;
     position: unset; min-width: 992px;">
