--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
         <body>
 
-            <div style="overflow-x:hidden; position:fixed;">
+            <div style="overflow-x:hidden;">
                 <div style="max-width: fit-content;
     position: unset; min-width: 992px;">
                     <div style="width:100%;  position: absolute; z-index: 2; padding: 7vw; display: grid;
