--- a/demoAbout.html
+++ b/demoAbout.html
@@ -576,9 +576,9 @@
                         </footer>
                     </div>
                     <div class="fadein">
-                        <img id="f3" src="hut.jpg" style="width:100%;min-width: 991px;">
-                        <img d="f2" src="san.jpg" style="width:100%; min-width: 991px;">
-                        <img id="f1" src="za.jpg" style="width:100%; min-width: 991px;">
+                        <img id="f3" src="hut.jpg" style="width:100%;min-height: 660px;object-fit: cover;">
+                        <img d="f2" src="san.jpg" style="width:100%; min-height: 660px;object-fit: cover;">
+                        <img id="f1" src="za.jpg" style="width:100%; min-height: 660px;object-fit: cover;">
                     </div>
                     <script src="slideshow.js"></script>
                 </div>
