--- a/demoContact.html
+++ b/demoContact.html
@@ -524,7 +524,7 @@
 
                                     <p style="color: white; font-size: 18px;"> phone: +1 (619)-927-2223</p>
                                     <p style="color: white; font-size: 18px;"> email:
-                                        contact@lajollapizzacompany.com</p>
+                                        contact@lajollapizzaco.com</p>
                                 </div>
                                 <br>
                                 <br>
