--- a/demoAbout.html
+++ b/demoAbout.html
@@ -511,7 +511,7 @@
     font-size: 24px;">- Robert, La Jolla Pizza Founder</p>
                                     </div>
                                     <div>
-                                        <img src="hut2.JPG"
+                                        <img src="huttt.jpg"
                                             style="border-radius: 20px; width: max(200px,30vw); margin: 3.5vw;">
                                     </div>
                                 </div>
