--- a/demoAbout.html
+++ b/demoAbout.html
@@ -214,7 +214,7 @@
     <div class="page-overly">
         <header class="header sticky transparent" style="background: rgb(13, 70, 13); position: static;">
             <div style="text-align: center; position: absolute; width: inherit;">
-                <a href="./demo.html">
+                <a href="./index.html">
 
                     <style>
                         h4 {
