--- a/demoMenu.html
+++ b/demoMenu.html
@@ -590,13 +590,12 @@
          padding-bottom: 0px;
                     align-content: space-between;">
                         <div class="Box"
-                            style=" background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; height: max-content;">
+                            style=" background: white; z-index: 3; border-radius: 25px; height: max-content;">
                             <div class="Box"
-                                style="  background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; padding: 5vw; height: max-content;">
+                                style="  background: white; z-index: 3; border-radius: 25px; padding: 5vw; height: max-content;">
 
 
-                                <h5 style="font-size: 36px;">Menu:</h5>
-                                <br>
+                                <h5 style="font-size: 36px; color:black;">Menu:</h5>
                                 <div class="Box"
                                     style="  background: white !important; z-index: 3; border-radius: 25px; padding: 5vw; padding-top: 40px;height: 100%;">
                                     <div style="margin: 15px;">
