--- a/demoMenu.html
+++ b/demoMenu.html
@@ -595,9 +595,9 @@
                                 style="  background: white; z-index: 3; border-radius: 25px; padding: 3vw; height: max-content;">
 
 
-                                <h5 style="font-size: 36px; color:black;">Menu:</h5>
+                                <h5 style="font-size: 36px; color:black; padding-top:15px;">Menu:</h5>
                                 <div class="Box"
-                                    style="  background: white !important; z-index: 3; border-radius: 25px; padding: 2vw; padding-top: 40px;height: 100%;">
+                                    style="  background: white !important; z-index: 3; border-radius: 25px; padding: 2vw;Ïheight: 100%;">
                                     <div style="margin: 15px;">
                                         <h5
                                             style="font-size: 32px; color: black; text-underline-offset: 8px; line-height: normal;">
