--- a/demoLocations.html
+++ b/demoLocations.html
@@ -631,7 +631,7 @@
                                         <font>
                                             <font>
                                                 <div style="text-align: -webkit-center;">
-                                                    <a href="./olght_home.html">
+                                                    <a href="www.olghtsites.com">
 
                                                         <p style="color:#CCCCCC;font-size:10px;">Web
                                                             Design by Olght Sites
