--- a/demoMenu.html
+++ b/demoMenu.html
@@ -1054,7 +1054,7 @@
                                         <font>
                                             <font>
                                                 <div style="text-align: -webkit-center;">
-                                                    <a href="./olght_home.html">
+                                                    <a href="www.olghtsites.com">
 
                                                         <p style="color:#CCCCCC;font-size:10px;">Web
                                                             Design by Olght Sites
