--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                                         <font>
                                             <font>
                                                 <div style="text-align: -webkit-center;">
-                                                    <a href="www.olghtsites.com">
+                                                    <a href="http://olghtsites.com/">
 
                                                         <p style="color:#CCCCCC;font-size:10px;">Web
                                                             Design by Olght Sites
