--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                             <!-- <img src="./rljp.png" alt="" style="width: 35%;"> -->
 
 
-                            <a href="https://waevdata.com/#sidr" class="navbar-toggle in">
+                            <a href="#sidr" class="navbar-toggle in">
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
