--- a/demoEvents.html
+++ b/demoEvents.html
@@ -600,7 +600,7 @@
                                         <font>
                                             <font>
                                                 <div style="text-align: -webkit-center;">
-                                                    <a href="www.olghtsites.com">
+                                                    <a href="https://olghtsites.com/">
 
                                                         <p style="color:#CCCCCC;font-size:10px;">Web
                                                             Design by Olght Sites
