--- a/demoContact.html
+++ b/demoContact.html
@@ -668,7 +668,7 @@
                                         <font>
                                             <font>
                                                 <div style="text-align: -webkit-center;">
-                                                    <a href="www.olghtsites.com">
+                                                    <a href="https://olghtsites.com/">
 
                                                         <p style="color:#CCCCCC;font-size:10px;">Web
                                                             Design by Olght Sites
@@ -707,7 +707,7 @@
                         <!-- <img src="./rljp.png" alt="" style="width: 35%;"> -->
 
 
-                        <a href="https://waevdata.com/#sidr" class="navbar-toggle in">
+                        <a href="#sidr" class="navbar-toggle in">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
