--- a/demoAbout.html
+++ b/demoAbout.html
@@ -429,7 +429,14 @@
                 }
             }
 
+ @media (max-width:767px) {
 
+
+                .footer {
+
+                    margin-top: 220px !important;
+                }
+            }
 
             @media (min-width:1237px) {
                 .footer {
@@ -486,30 +493,30 @@
                         <div class="Box"
                             style=" background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; height: 100%;">
                             <div class="Box"
-                                style="  background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; padding: 50px;height: 100%;">
+                                style="  background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; padding: min(6vw,50px);height: 100%;">
 
 
-                                <h5 style="font-size: 36px;">About:</h5>
+                                <h5 style="font-size: min(6vw,36px);">About:</h5>
                                 <br>
-                                <br>
+
                                 <div class="box locationText"
                                     style="display: flex; width: 100%; justify-content: space-evenly; font-family: sans-serif;">
                                     <div class="box"
                                         style="display: flex; flex-direction: column; width: 100%; justify-content: space-evenly; font-family: sans-serif;">
 
                                         <p style="font-family: 'customfont1';
-    font-size: 24px;">If nautical flavor is something you wish then come down to la Jolla Pizza
+    font-size: min(3vw,24px);">If nautical flavor is something you wish then come down to la Jolla Pizza
                                             where we've been serving east coast pies with west coast style since 2020.
                                             From pineapple to prosciutto, we offer a sweet and savory variety with
                                             ingredience all locally sourced in California. Stop by or order a slice
                                             online now!</p>
                                         <br>
-                                        <br>
+
                                         <p style="font-family: 'customfont1';
-    font-size: 24px;">- Robert, La Jolla Pizza Founder</p>
+    font-size:min(3vw,24px);">- Robert, La Jolla Pizza Founder</p>
                                     </div>
                                     <div>
-                                        <img src="huttt.jpg"
+                                        <img src="hut2.jpg"
                                             style="border-radius: 20px; width: max(200px,30vw); margin: 3.5vw;">
                                     </div>
                                 </div>
