--- a/demoAbout.html
+++ b/demoAbout.html
@@ -516,7 +516,7 @@
     font-size:min(3vw,24px);">- Robert, La Jolla Pizza Founder</p>
                                     </div>
                                     <div>
-                                        <img src="hut2.jpg"
+                                        <img src="huttt.jpg"
                                             style="border-radius: 20px; width: max(200px,30vw); margin: 3.5vw;">
                                     </div>
                                 </div>
