--- a/demoMenu.html
+++ b/demoMenu.html
@@ -595,12 +595,12 @@
                                 style="  background: white; z-index: 3; border-radius: 25px; padding: 3vw; height: max-content;">
 
 
-                                <h5 style="font-size: 36px; color:black; padding-top:15px;">Menu:</h5>
+                                <h5 style="font-size: min(6vw,36px); color:black; padding-top:15px;">Menu:</h5>
                                 <div class="Box"
                                     style="  background: white !important; z-index: 3; border-radius: 25px; padding: 2vw;Ïheight: 100%;">
                                     <div style="margin: 15px;">
                                         <h5
-                                            style="font-size: 32px; color: black; text-underline-offset: 8px; line-height: normal;">
+                                            style="font-size: min(6vw,32px); color: black; text-underline-offset: 8px; line-height: normal;">
                                             <u><b>Build Your Own Pizza:</b></u>
                                         </h5>
                                     </div>
@@ -673,7 +673,7 @@
                                     </div>
                                     <div style="margin: 15px;">
                                         <h5
-                                            style="font-size: 32px; color: black; text-underline-offset: 8px; line-height: normal;">
+                                            style="font-size:min(6vw,32px); color: black; text-underline-offset: 8px; line-height: normal;">
                                             <u><b>Specialty Pizzas:</b></u>
                                         </h5>
                                     </div>
@@ -794,7 +794,7 @@
                                     </div>
 
                                     <div style="margin: 15px;">
-                                        <h5 style="font-size: 32px; color: black; text-underline-offset: 8px;">
+                                        <h5 style="font-size: min(6vw,32px); color: black; text-underline-offset: 8px;">
                                             <u><b>Sandwiches:</b></u>
                                         </h5>
                                     </div>
@@ -861,7 +861,7 @@
 
                                     </div>
                                     <div style="margin: 15px;">
-                                        <h5 style="font-size: 32px; color: black; text-underline-offset: 8px;">
+                                        <h5 style="font-size: min(6vw,32px); color: black; text-underline-offset: 8px;">
                                             <u><b>Salads:</b></u>
                                         </h5>
                                     </div>
@@ -924,7 +924,7 @@
                                         style="display: flex; width: 100%; justify-content: space-between; font-family: sans-serif;">
                                         <div>
                                             <div style=" margin: 15px;">
-                                                <h5 style="font-size: 32px; color: black; text-underline-offset: 8px;">
+                                                <h5 style="font-size: min(6vw,32px); color: black; text-underline-offset: 8px;">
                                                     <u><b>Sides:</b></u>
                                                 </h5>
                                             </div>
@@ -970,7 +970,7 @@
                                         </div>
                                         <div>
                                             <div style="margin: 15px;">
-                                                <h5 style="font-size: 32px; color: black; text-underline-offset: 8px;">
+                                                <h5 style="font-size: min(6vw,32px); color: black; text-underline-offset: 8px;">
                                                     <u><b>Drinks:</b></u>
                                                 </h5>
                                             </div>
