--- a/demoMenu.html
+++ b/demoMenu.html
@@ -106,7 +106,7 @@
                     </a></li>
 
                 <li style="list-style-type: none ">
-                    <a title="Contact" href="./demoMenu.html" class="nav-link">
+                    <a title="Contact" href="./demo.html" class="nav-link">
                         <h5>Menu</h5>
                     </a>
                 </li>
@@ -592,7 +592,7 @@
                         <div class="Box"
                             style=" background: white; z-index: 3; border-radius: 25px; height: max-content; box-shadow: rgba(100, 100, 111, 0.9) 0px 7px 29px 0px;">
                             <div class="Box"
-                                style="  background: white; z-index: 3; border-radius: 25px; padding: 3vw; height: max-content;">
+                                style="  background: white; z-index: 3; border-radius: 25px; padding:min(6vw, 50px); height: max-content;">
 
 
                                 <h5 style="font-size: min(6vw,36px); color:black; padding-top:15px;">Menu:</h5>
