--- a/demoMenu.html
+++ b/demoMenu.html
@@ -595,7 +595,7 @@
                                 style="  background: white; z-index: 3; border-radius: 25px; padding:min(6vw, 50px); height: max-content;">
 
 
-                                <h5 style="font-size: min(6vw,36px); color:black; padding-top:15px;">Menu:</h5>
+                                <h5 style="font-size: min(6vw,36px); color:black;">Menu:</h5>
                                 <div class="Box"
                                     style="  background: white !important; z-index: 3; border-radius: 25px; padding: 2vw;Ïheight: 100%;">
                                     <div style="margin: 15px;">
