--- a/demoLocations.html
+++ b/demoLocations.html
@@ -176,7 +176,7 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            font-size: 36px;
+            font-size: ;
             margin-left: 50px;
             color: white;
         }
@@ -281,7 +281,7 @@
 
                         .otherNavItems:hover {
                             color: #f1f1f1;
-                            font-size: 36px;
+                            font-size: ;
 
                         }
 
@@ -448,7 +448,7 @@
             @media (min-width:825px) {
                 .locationText {
                     color: white;
-                    font-size: 36px;
+                    font-size: ;
                     line-height: normal;
                     flex-direction: row;
                 }
@@ -457,7 +457,7 @@
             @media (max-width:825px) {
                 .locationText {
                     color: white;
-                    font-size: 36px;
+                    font-size: ;
                     line-height: normal;
                     flex-direction: column;
                     gap: 45px;
@@ -485,6 +485,7 @@
                 }
 
             }
+            
             @media (min-width:1275px) {
                 .footer {
                     margin-top: 150px;
@@ -542,50 +543,50 @@
                         <div class="Box"
                             style=" background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; height: 100%;">
                             <div class="Box"
-                                style="  background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; padding: 50px;height: 100%;">
+                                style="  background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; padding: 5vw;height: 100%;">
 
 
-                                <h5 style="font-size: 36px;">Locations:</h5>
+                                <h5 style="font-size:min(6vw,36px) ;">Locations:</h5>
                                 <br>
                                 <br>
                                 <div class="box locationText"
                                     style="display: flex;  width: 100%; justify-content: space-evenly; font-family: sans-serif;">
 
                                     <div>
-                                        <h5 style="font-size: 32px;"><b>La Jolla:</b> </h5>
+                                        <h5 style="font-size: min(5vw,32px);"><b>La Jolla:</b> </h5>
                                         <br>
 
-                                        <p>1298 Prospect St</p>
+                                        <p style="font-size: min(3vw,24px);">1298 Prospect St</p>
 
-                                        <p>La Jolla,CA</p>
+                                        <p style="font-size: min(3vw,24px);">La Jolla,CA</p>
 
-                                        <p>92037</p>
+                                        <p style="font-size: min(3vw,24px);">92037</p>
                                         <br>
-                                        <p style="font-size: 24px;">P:+1(619)-455-0042</p>
+                                        <p style="font-size: min(3vw,24px);">P:+1(619)-455-0042</p>
                                     </div>
                                     <div>
-                                        <h5 style="font-size: 32px; line-height: normal;"><b>Pacific Beach:</b> </h5>
+                                        <h5 style="font-size: min(5vw,32px); line-height: normal;"><b>Pacific Beach:</b> </h5>
                                         <br>
 
-                                        <p>124 Conch St</p>
+                                        <p style="font-size: min(3vw,24px);">124 Conch St</p>
 
-                                        <p>San Diego,CA</p>
+                                        <p style="font-size: min(3vw,24px);">San Diego,CA</p>
 
-                                        <p>92109</p>
+                                        <p style="font-size: min(3vw,24px);">92109</p>
                                         <br>
-                                        <p style="font-size: 24px;">P:+1(619)-921-4117</p>
+                                        <p style="font-size: min(3vw,24px);">P:+1(619)-921-4117</p>
                                     </div>
                                 </div>
                                 <div
                                     style="font-family: sans-serif; margin-top: 40px; text-align: center; color: white;">
-                                    <h5 style="font-size: 32px;"><b>hours:</b> </h5>
+                                    <h5 style="font-size: min(5vw,32px);"><b>hours:</b> </h5>
                                     <br>
 
-                                    <p>Mon - Thu, Sun:</p>
-                                    <p>11:00 AM - 10:00 PM</p>
+                                    <p style="font-size: min(3vw,24px);">Mon - Thu, Sun:</p>
+                                    <p style="font-size: min(3vw,24px);">11:00 AM - 10:00 PM</p>
 
-                                    <p>Fri - Sat: </p>
-                                    <p>11:00 AM - 12:00 AM</p>
+                                    <p style="font-size: min(3vw,24px);">Fri - Sat: </p>
+                                    <p style="font-size: min(3vw,24px);">11:00 AM - 12:00 AM</p>
 
 
                                 </div>
