--- a/demoEvents.html
+++ b/demoEvents.html
@@ -525,35 +525,35 @@
                         <div class="Box"
                             style=" background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; height: 100%;">
                             <div class="Box"
-                                style="  background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; padding: 50px;height: 100%;">
+                                style="  background: rgba(234, 131, 21, 0.6) !important; z-index: 3; border-radius: 25px; padding: 5vw;height: 100%;">
 
 
-                                <h5 style="font-size: 36px;">Events:</h5>
+                                <h5 style="font-size: min(6vw,36px);">Events:</h5>
                                 <br>
                        
                                 <div class="box locationText"
                                     style="display: flex;  width: 100%; justify-content: space-evenly; font-family: sans-serif;">
 
                                     <div style="text-align: center;">
-                                        <h5 style="font-size: 32px;color: #8cffd1;"><b>Tuesdays:</b> </h5>
+                                        <h5 style="font-size:min(5vw,32px);color: #8cffd1;"><b>Tuesdays:</b> </h5>
                                         <br>
 
-                                        <p>Buy one get one free slice of any one topping pizza!</p>
+                                        <p style="font-size: min(3vw,24px);">Buy one get one free slice of any one topping pizza!</p>
 
                                         <br>
-                                        <h5 style="font-size: 32px;color: #ffff00;"><b>Saturdays:</b> </h5>
+                                        <h5 style="font-size:min(5vw,32px);color: #ffff00;"><b>Saturdays:</b> </h5>
                                         <br>
 
-                                        <p>All cheese and pineapple Pizza 30% off!</p>
+                                        <p style="font-size: min(3vw,24px);">All cheese and pineapple Pizza 30% off!</p>
                                         <br>
-                                        <h5 style="font-size: 32px;color: #00ec36;"><b>Sundays:</b> </h5>
-                                        <br>
-
-                                        <p>Senior discount 25% off!</p>
-                                        <br>
+                                        <h5 style="font-size:min(5vw,32px);color: #00ec36;"><b>Sundays:</b> </h5>
                                         <br>
 
-                                        <p style="font-size: 18px;">*Call or see in store to find out our daily
+                                        <p style="font-size: min(3vw,24px);">Senior discount 25% off!</p>
+                                        <br>
+                                  
+
+                                        <p style="font-size: min(2.5vw,18px);">*Call or see in store to find out our daily
                                             specials!*</p>
                                     </div>
 
