--- a/demoContact.html
+++ b/demoContact.html
@@ -515,11 +515,11 @@
                                 style="  background: rgba(234, 131, 21, 0.6) !important; max-width: max-content;z-index: 3; border-radius: 25px; padding: 5vw;height: 100%;">
 
 
-                                <h5 style="font-size: 36px;">Contact:</h5>
+                                <h5 style="font-size: min(6vw,36px);">Contact:</h5>
                                 <br>
                                 <br>
                                 <div>
-                                    <h5 style="font-size: 24px;">Contact Information:</h5>
+                                    <h5 style="font-size: min(3vw,24px);">Contact Information:</h5>
                                     <br>
 
                                     <p style="color: white; font-size: 18px;"> phone: +1 (619)-927-2223</p>
@@ -528,7 +528,7 @@
                                 </div>
                                 <br>
                                 <br>
-                                <h5 style="font-size: 24px;">Contact Form:</h5>
+                                <h5 style="font-size: min(3vw,24px);">Contact Form:</h5>
                                 <br>
                                 <div class="subscribe-wapper">
                                     <div class="form hm-connect">
@@ -571,7 +571,7 @@
                                                 <div>
                                                     <div>
                                                         <div><label style="color: white;">
-                                                                <h5 style="font-size: 20px;">Phone or Email:</h5>
+                                                                <h5 style="font-size: min(2.3vw,20px);">Phone or Email:</h5>
                                                                 <span></span>
                                                             </label>
                                                             <div>
@@ -582,7 +582,7 @@
                                                             </div>
                                                         </div>
                                                         <div><label style="color: white;">
-                                                                <h5 style="font-size: 20px;">Message:</h5><span
+                                                                <h5 style="font-size: min(2.3vw,20px);">Message:</h5><span
                                                                     class="gfield_required"></span>
                                                             </label>
                                                             <div>
