--- a/demoEvents.html
+++ b/demoEvents.html
@@ -466,7 +466,12 @@
                 }
             }
 
+            @media (max-width:991px) {
+                .footer {
+                    margin-top: 200px;
+                }
 
+            }
 
 
             @media (min-width:1107px) {
