--- a/demoContact.html
+++ b/demoContact.html
@@ -517,9 +517,9 @@
 
                                 <h5 style="font-size: min(6vw,36px);">Contact:</h5>
                                 <br>
-                                <br>
+                       
                                 <div>
-                                    <h5 style="font-size: min(3vw,24px);">Contact Information:</h5>
+                                    <h5 style="font-size: min(4vw,24px);">Contact Information:</h5>
                                     <br>
 
                                     <p style="color: white; font-size: 18px;"> phone: +1 (619)-927-2223</p>
@@ -527,8 +527,8 @@
                                         contact@lajollapizzaco.com</p>
                                 </div>
                                 <br>
-                                <br>
-                                <h5 style="font-size: min(3vw,24px);">Contact Form:</h5>
+                    
+                                <h5 style="font-size: min(4vw,24px);">Contact Form:</h5>
                                 <br>
                                 <div class="subscribe-wapper">
                                     <div class="form hm-connect">
@@ -571,7 +571,7 @@
                                                 <div>
                                                     <div>
                                                         <div><label style="color: white;">
-                                                                <h5 style="font-size: min(2.3vw,20px);">Phone or Email:</h5>
+                                                                <h5 style="font-size: min(3vw,20px);">Phone or Email:</h5>
                                                                 <span></span>
                                                             </label>
                                                             <div>
@@ -582,7 +582,7 @@
                                                             </div>
                                                         </div>
                                                         <div><label style="color: white;">
-                                                                <h5 style="font-size: min(2.3vw,20px);">Message:</h5><span
+                                                                <h5 style="font-size: min(3vw,20px);">Message:</h5><span
                                                                     class="gfield_required"></span>
                                                             </label>
                                                             <div>
@@ -603,7 +603,7 @@
 
                                                         <button type="submit" class="btn base" onclick="submitForm1()"
                                                             style="background: rgb(255, 81, 0);height: max-content;">
-                                                            <h5 style="font-size: 24px;">Submit</h5>
+                                                            <h5 style="font-size: min(4vw,24px;">Submit</h5>
                                                         </button>
                                                         <div style="align-self: center;">
                                                             <p style="color: white;  visibility: hidden; font-size:18px;"
