--- a/demoContact.html
+++ b/demoContact.html
@@ -603,7 +603,7 @@
 
                                                         <button type="submit" class="btn base" onclick="submitForm1()"
                                                             style="background: rgb(255, 81, 0);height: max-content;">
-                                                            <h5 style="font-size: min(4vw,24px;">Submit</h5>
+                                                            <h5 style="font-size: min(4vw,24px);">Submit</h5>
                                                         </button>
                                                         <div style="align-self: center;">
                                                             <p style="color: white;  visibility: hidden; font-size:18px;"
