--- a/demoLocations.html
+++ b/demoLocations.html
@@ -552,7 +552,7 @@
                                     style="display: flex;  width: 100%; justify-content: space-evenly; font-family: sans-serif;">
 
                                     <div>
-                                        <h5 style="font-size: min(5vw,32px);"><b>La Jolla:</b> </h5>
+                                        <h5 style="font-size: min(5vw,32px); line-height: normal;"><b>La Jolla:</b> </h5>
                                         <br>
 
                                         <p style="font-size: min(3vw,24px);">1298 Prospect St</p>
