--- a/demoLocations.html
+++ b/demoLocations.html
@@ -460,7 +460,7 @@
                     font-size: ;
                     line-height: normal;
                   
-                    gap: 45px;
+                  
                 }
             }
 
@@ -549,7 +549,7 @@
                                 <h5 style="font-size:min(6vw,36px) ;">Locations:</h5>
                                 <br>
                                 <div class="box locationText"
-                                    style="display: flex;  width: 100%; justify-content: space-evenly; font-family: sans-serif;">
+                                    style="display: flex;  width: 100%; justify-content: space-evenly; text-align: center;">
 
                                     <div>
                                         <h5 style="font-size: min(5vw,32px); line-height: normal;"><b>La Jolla:</b> </h5>
